# smelt

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/issues/open/: 001-branch-is-merged-fragile-parsing.md  002-dialoguer-non-tty.md  003-execute-list-error-mapping.md  004-state-deserialization-naming.md  005-prune-toctou.md  006-worktree-state-pub-fields.md  007-untested-error-paths.md  008-mock-gitops-tests.md  009-session-name-validation.md  010-session-status-display.md  011-chrono-duration-deprecation.md  012-resolve-status-dead-code.md  013-thiserror-display-impls.md  014-must-use-remove-result.md  033-extract-shared-test-repo-setup.md  034-integration-test-verify-merged-content.md  035-merge-session-result-computed-fields.md  036-completed-session-holds-worktree-state.md  037-lib-rs-incomplete-reexports.md  038-duplicate-progress-messages.md  039-must-use-merge-report.md  040-diffstat-file-pathbuf.md  041-clone-bound-contagion.md  042-test-empty-manifest-merge.md  (+93 more)
.planning/milestones/: v0.1.0-MILESTONE-AUDIT.md  v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md
crates/smelt-cli/: Cargo.toml
crates/smelt-cli/src/: main.rs
crates/smelt-cli/src/commands/: init.rs  merge.rs  mod.rs  orchestrate.rs  summary.rs  worktree.rs
crates/smelt-cli/tests/: cli_agent.rs  cli_integration.rs  cli_merge.rs  cli_orchestrate.rs  cli_summary.rs
crates/smelt-core/: Cargo.toml
crates/smelt-core/src/: error.rs  init.rs  lib.rs
crates/smelt-core/src/ai/: mod.rs  provider.rs
crates/smelt-core/src/git/: cli.rs  mod.rs
crates/smelt-core/src/merge/: ai_handler.rs  conflict.rs  mod.rs  ordering.rs  types.rs
crates/smelt-core/src/orchestrate/: dag.rs  executor.rs  mod.rs  state.rs  types.rs
crates/smelt-core/src/session/: agent.rs  manifest.rs  mod.rs  runner.rs  types.rs
crates/smelt-core/src/summary/: analysis.rs  mod.rs  scope.rs  types.rs
crates/smelt-core/src/worktree/: mod.rs  orphan.rs  state.rs
(+74 files in other folders)
