[package]
name = "smelt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smelt command-line interface"

[[bin]]
name = "smelt"
path = "src/main.rs"

[dependencies]
smelt-core.path = "../smelt-core"
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
console.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
